objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CA Case Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_Verified__c</fullName>
        <label>Address Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Fields_Verified__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Mozilla All Fields Verified?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Poonam : This field was created as part of Approval Process but it is not being used. The Approval Process will be reconsidered and perhaps redesigned after Jixi is implemented.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Need Information from CA</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Location_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Country where the Auditor who issued the standard audit statement is based out of. See &apos;List All Auditors&apos; below for choices. Send email to support@ccadb.org if your auditor is not listed.</inlineHelpText>
        <label>Auditor Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a valid value for selected Auditor</errorMessage>
            <filterItems>
                <field>Auditor_Location__c.Auditor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Auditor_New__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Auditor_Location__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Location_Status_New__c</fullName>
        <formula>Auditor_Location_New__r.Auditor_Location_Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auditor Location Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Name of Auditor who issued the standard audit statement. See &apos;List All Auditors&apos; below for choices. Send email to support@ccadb.org if your auditor is not listed.</inlineHelpText>
        <label>Auditor</label>
        <referenceTo>Auditor__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications_New__c</fullName>
        <formula>Auditor_Location_New__r.Auditor_Qualifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</inlineHelpText>
        <label>Auditor Qualifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <description>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</description>
        <inlineHelpText>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</inlineHelpText>
        <label>DELETE Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Status_New__c</fullName>
        <formula>Auditor_New__r.Auditor_Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auditor Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Verified__c</fullName>
        <label>Auditor Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Website_New__c</fullName>
        <formula>Auditor_New__r.Auditor_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL to information about this Auditor</inlineHelpText>
        <label>Auditor Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <description>URL to information about this Auditor</description>
        <inlineHelpText>URL to information about this Auditor</inlineHelpText>
        <label>DELETE Auditor Website</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <description>Name of Auditor who issued the Standard Audit Statement</description>
        <inlineHelpText>Name of Auditor who issued the Standard Audit Statement</inlineHelpText>
        <label>DELETE Auditor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_ALV_Comments__c</fullName>
        <inlineHelpText>Explanation about why audit accepted when ALV status is FAIL </inlineHelpText>
        <label>BR Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Authenticity_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only when authenticity of audit statement has been confirmed </inlineHelpText>
        <label>BR Audit Authenticity Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Auto_Review_Results__c</fullName>
        <inlineHelpText>Results returned by ALV service</inlineHelpText>
        <label>BR Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Auto_Review_Status__c</fullName>
        <inlineHelpText>Status returned by ALV service</inlineHelpText>
        <label>BR Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Gap_For_All_Root_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rollup field for all Root Cases related to the Case (updated by trigger)</inlineHelpText>
        <label>BR Audit Gap For All Root Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>BR Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>BR Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>BR Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date__c</fullName>
        <description>Date BR Audit Statement Issued</description>
        <inlineHelpText>Date BR Audit Statement Issued</inlineHelpText>
        <label>BR Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Link_Verified__c</fullName>
        <inlineHelpText>Root Store Manager to verify data fields in BR Audit section</inlineHelpText>
        <label>BR Audit Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Link__c</fullName>
        <description>If able to issue SSL/TLS certs, then URL to Baseline Requirements audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>If able to issue SSL/TLS certs, then URL to Baseline Requirements audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>BR Audit Statement (Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type__c</fullName>
        <label>BR Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Deviation_Comments__c</fullName>
        <label>BR Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>BR Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Self_Assessment__c</fullName>
        <inlineHelpText>Link to the CA&apos;s BR Self Assessment document in Bugzilla</inlineHelpText>
        <label>BR Self Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository__c</fullName>
        <description>URL to where policy documentation specific to the listed root certs may be found</description>
        <inlineHelpText>URL to where policy documentation specific to the listed root certs may be found</inlineHelpText>
        <label>CA Document Repository</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_1__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 is needed so that more than one person in your organization will receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_2__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 is needed so that more than one person in your organization will receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>DELETE CA Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Information_Verified__c</fullName>
        <label>CA Owner Information Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_s_Reponse_to_Recom_Prac_Verified__c</fullName>
        <label>DELETE CA&apos;s Rep to Reco Prac (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_s_Response_to_Prob_Prac_Verified__c</fullName>
        <description>CA&apos;s Response to Problematic Practices</description>
        <label>DELETE CA&apos;s Res to Prob Prac (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAs_Response_to_Forbidden_Practices__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: CP/CPS section numbers addressing each of the items listed in https://wiki.mozilla.org/CA/Forbidden_or_Problematic_Practices&quot; &amp; BR() &amp; 
&quot;1. Long-lived Certificates:&quot; &amp; BR() &amp; 
&quot;2. Non-Standard Email Address Prefixes for Domain Ownership Validation:&quot; &amp; BR() &amp; 
&quot;3. Issuing End Entity Certificates Directly From Roots:&quot; &amp; BR() &amp; 
&quot;4. Distributing Generated Private Keys in PKCS#12 Files:&quot; &amp; BR() &amp; 
&quot;5. Certificates Referencing Local Names or Private IP Addresses:&quot; &amp; BR() &amp; 
&quot;6. Issuing SSL Certificates for .int Domains:&quot; &amp; BR() &amp; 
&quot;7. OCSP Responses Signed by a Certificate Under a Different Root:&quot; &amp; BR() &amp; 
&quot;8. Issuance of SHA-1 Certificates:&quot; &amp; BR() &amp; 
&quot;9. Delegation of Domain / Email Validation to Third Parties:&quot; &amp; BR(), 
&quot;&quot;)</defaultValue>
        <inlineHelpText>CA&apos;s response to forbidden practices</inlineHelpText>
        <label>CA&apos;s Response to Forbidden Practices</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAs_Response_to_Required_Practices__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: CP/CPS section numbers addressing each of the items listed in https://wiki.mozilla.org/CA/Required_or_Recommended_Practices&quot; &amp; BR() &amp; 
&quot;1. Publicly Available CP and CPS:&quot; &amp; BR() &amp; 
&quot;1.1 Revision Table, updated annually:&quot; &amp; BR() &amp; 
&quot;1.2 CAA Domains listed in CP/CPS:&quot; &amp; BR() &amp; 
&quot;1.3 BR Commitment to Comply statement in CP/CPS:&quot; &amp; BR() &amp;
&quot;1.4 CP/CPS Structured According to RFC 3647, appropriate use of &apos;No Stipulation&apos;:&quot; &amp; BR() &amp; 
&quot;2. Audit Criteria:&quot; &amp; BR() &amp; 
&quot;2.1 Complete Audit History:&quot; &amp; BR() &amp;
&quot;Root key generation report, any point in time audits, all period of time audits&quot; &amp; BR() &amp;
&quot;3. Revocation of Compromised Certificates:&quot; &amp; BR() &amp;  
&quot;4. Verifying Domain Name Ownership:&quot; &amp; BR() &amp; 
&quot;4.1 Baseline Requirements:&quot; &amp; BR() &amp; 
&quot;4.2 WHOIS:&quot; &amp; BR() &amp; 
&quot;4.3 Email Challenge-Response:&quot; &amp; BR() &amp; 
&quot;5. Verifying Email Address Control:&quot; &amp; BR() &amp; 
&quot;6. DNS names go in SAN:&quot; &amp; BR() &amp; 
&quot;7. OCSP:&quot; &amp; BR() &amp; 
&quot;- OCSP SHALL NOT respond &apos;Good&apos; for unissued certs:&quot; &amp; BR() &amp; 
&quot;8. Network Security Controls:&quot; &amp; BR(), 
&quot;&quot;)</defaultValue>
        <inlineHelpText>CA&apos;s Response to Mozilla&apos;s Required Practices</inlineHelpText>
        <label>CA&apos;s Response to Required Practices</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Last_Updated_Date__c</fullName>
        <label>CP/CPS Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Links_Verified__c</fullName>
        <inlineHelpText>Root Store Manager to verify data fields in CP/CPS section</inlineHelpText>
        <label>CP/CPS Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <isActive>false</isActive>
                    <label>Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Progress__c</fullName>
        <label>Case Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Audit/CP/CPS data</fullName>
                </value>
                <value>
                    <fullName>Add Root Cases</fullName>
                </value>
                <value>
                    <fullName>Update Test Websites</fullName>
                </value>
                <value>
                    <fullName>Run ALV</fullName>
                </value>
                <value>
                    <fullName>Verification by Root Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit record id for Case</inlineHelpText>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Policy_Link__c</fullName>
        <description>URL to Certificate Policy documentation specific to the listed root certs. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>URL to Certificate Policy documentation specific to the listed root certs. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>Certificate Policy (Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Practice_Statement_Link__c</fullName>
        <description>URL to CPS specific to the listed root certs. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>URL to CPS specific to the listed root certs. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>Certification Practice Statement (Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_ALV_Comments__c</fullName>
        <label>Code Signing Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_ALV_Results__c</fullName>
        <label>Code Signing Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_ALV_Status__c</fullName>
        <label>Code Signing Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Authenticity_Confirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Signing Audit Authenticity Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Gap_For_All_Root_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Signing Audit Gap For All Root Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Period_End_Date__c</fullName>
        <label>Code Signing Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Period_Start_Date__c</fullName>
        <label>Code Signing Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>Code Signing Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Statement_Date__c</fullName>
        <label>Code Signing Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Statement_Link__c</fullName>
        <label>Code Signing Audit Statement (Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Type__c</fullName>
        <label>Code Signing Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Verified__c</fullName>
        <label>Code Signing Audit Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Signing_Deviation_Comments__c</fullName>
        <label>Code Signing Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>Code Signing Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website_Verified__c</fullName>
        <label>DELETE Company Website (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <defaultValue>&quot;http://NEED: URL to company website&quot;</defaultValue>
        <description>Website URL</description>
        <inlineHelpText>Website URL</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <formula>Contact.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Department of the POC.</inlineHelpText>
        <label>FUTURE Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Title of the POC.</inlineHelpText>
        <label>FUTURE Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>Contact.Type_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The role of POC.</inlineHelpText>
        <label>FUTURE Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Root_Case_s__c</fullName>
        <inlineHelpText>Count of Root Cases related to this Case</inlineHelpText>
        <label>Count of Root Case(s)</label>
        <summaryForeignKey>Root_Case__c.Case_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Constraints__c</fullName>
        <inlineHelpText>Government Applicants Only. List all gTLDs/ccTLDs (Example: *.gov.xxx, *.mil.xxx, etc.)</inlineHelpText>
        <label>Domain Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EVCodeSigning_AuditGap_For_All_RootCases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rollup field for all Root Cases related to the Case (updated by trigger)</inlineHelpText>
        <label>EVCodeSigning AuditGap For All RootCases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>EV SSL Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>EV SSL Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date__c</fullName>
        <description>Date EV Audit Statement Issued</description>
        <inlineHelpText>Date EV Audit Statement Issued</inlineHelpText>
        <label>EV SSL Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Link_Verified__c</fullName>
        <inlineHelpText>Root Store Manager to verify data fields in EV Audit section</inlineHelpText>
        <label>EV SSL Audit Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Link__c</fullName>
        <description>If able to issue EV certs, then URL to EV audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>If able to issue EV certs, then URL to EV audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>EV SSL Audit Statement (Link)</label>
        <type>TextArea</type>
    </fields>
</CustomObject>